Fix About Us mobile spacing & Home lg grid.

--- a/src/App.scss
+++ b/src/App.scss
@@ -33,7 +33,6 @@ a:hover {
     color: $color-primary;
 }
 
-
 .menu .ms-auto .nav-link:hover {
     color: $color-dark;
 }
@@ -46,29 +45,10 @@ svg {
     fill: $color-pale;
 }
 
-nav button.btn {
-    background-color: $color-primary;
-    color: $color-pale;
-    font-size: 1.5rem;
-    font-weight: 600;
-    width: 10rem;
-    margin-bottom: 1rem;
-}
-
-.navbar-toggler-icon {
-    width: 32px;
-    height: 40px;
-    color: $color-dark;
-}
-
 .my-container div.row {
     display: flex;
     justify-content: center;
     margin: 0;
-}
-
-div.my-container {
-    padding: 0;
 }
 
 .flip-container,
@@ -114,7 +94,7 @@ div.col-md-4 {
 
 .footer .bi {
     font-size: 50px;
-} 
+}
 
 .menu h1,
 .menu .ms-auto .nav-link {
@@ -124,7 +104,7 @@ div.col-md-4 {
 
 .menu .ms-auto .nav-link,
 .menu .bi {
-    font-size: 20px;
+    font-size: 1.5rem;
 }
 
 svg:hover {
@@ -143,22 +123,37 @@ svg:hover {
 }
 
 .about-page {
+    display: block;
+}
+
+div.about-pic {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 90%;
+    height: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+div.about-pic,
+div.about-text {
     margin-top: 1rem;
     margin-bottom: 1rem;
 }
 
-.about-pic img {
-    min-width: 500px;
-    max-width: 30vw;
-}
-
 .about-text {
-    padding: 20px;
-    text-align: center;
     background-color: $color-black-transparent;
+    text-align: center;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.about-text h3, 
+.about-text h3,
 .about-text p {
     margin-top: 3rem;
     margin-bottom: 3rem;
@@ -171,6 +166,39 @@ svg:hover {
 .about-text p,
 .contact-page {
     font-size: 1.2rem;
+}
+
+@media (min-width: 1000px) {
+    .about-page {
+        display: flex;
+    }
+
+    div.about-pic {
+        flex: 1 2 auto;
+        width: 30%;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        margin-right: 1rem;
+    }
+
+    div.about-pic,
+    div.about-text {
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+    }
+
+    .about-text {
+        background-color: $color-black-transparent;
+        text-align: center;
+        padding: 20px;
+        flex: 1 1 auto;
+        display: flex;
+        flex-direction: column;
+        width: 60%;
+        margin-left: 1rem;
+        margin-right: 1rem;
+    }
 }
 
 .form-control {
@@ -204,9 +232,7 @@ form button {
 }
 
 .donate-page {
-    min-height: 100vh;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 55%;
@@ -248,7 +274,8 @@ form button {
 
 .copyright {
     font-size: 0.7rem;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+        sans-serif;
     text-align: center;
 }
 
@@ -259,4 +286,8 @@ form button {
 
 .card img {
     min-height: 75%;
+}
+
+.footer h5 {
+    font-size: 1.5rem;
 }
